--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 a{
   text-decoration: none;
@@ -11,4 +12,11 @@ menu{
 }
 img {
   max-width: 100%;
+}
+button {
+  font-size: inherit;
+  width: 8rem;
+  height: 2rem;
+  color: white;
+  background-color: black;
 }
